--- a/aistudio.html
+++ b/aistudio.html
@@ -562,7 +562,7 @@
           class="btn btn--outline btn--large plan-cta"
           target="_blank"
         >
-          Iniciar com Essencial
+          Contratar
         </a>
       </div>
 
@@ -600,7 +600,7 @@
           class="btn btn--primary btn--large plan-cta"
           target="_blank"
         >
-          Contratar Crescimento
+          Contratar
         </a>
       </div>
 
@@ -639,7 +639,7 @@
           class="btn btn--primary btn--large plan-cta"
           target="_blank"
         >
-          Falar sobre o Estratégico
+          Contratar
         </a>
       </div>
 
