--- a/aistudio.html
+++ b/aistudio.html
@@ -45,6 +45,7 @@
       <ul class="nav__list">
         <li class="nav__item"><a href="#showcase" class="nav__link">Como funciona</a></li>
         <li class="nav__item"><a href="#features" class="nav__link">Por que a Tullu?</a></li>
+        <li class="nav__item"><a href="#planos" class="nav__link">Planos</a></li>
         <li class="nav__item"><a href="#comparativo" class="nav__link">Comparativo</a></li>
         <li class="nav__item"><a href="#agentes" class="nav__link">Mundos</a></li>
         <li class="nav__item"><a href="#faq" class="nav__link">FAQ</a></li>
