--- a/index.html
+++ b/index.html
@@ -1591,20 +1591,13 @@
           </div>
 
 
-
-          <div class="footer__section">
-
-            <h4 class="footer__section-title">Legal</h4>
-
-            <ul class="footer__list">
-
-              <li><a href="#" class="footer__link">Política de Privacidade</a></li>
-
-              <li><a href="#" class="footer__link">Termos de Uso</a></li>
-
-            </ul>
-
-          </div>
+ <div class="footer__section">
+          <h4 class="footer__section-title">Legal</h4>
+          <ul class="footer__list">
+            <li><a href="https://tullumotion.com/assets/docs/politica.pdf" class="footer__link">Política de Privacidade</a></li>
+            <li><a href="https://tullumotion.com/assets/docs/termos.pdf" target="_blank" class="footer__link">Termos de Uso</a></li>
+          </ul>
+        </div>
 
         </div>
 
