--- a/formulario-teste.html
+++ b/formulario-teste.html
@@ -419,13 +419,13 @@
             </ul>
           </div>
 
-          <div class="footer__section">
-            <h4 class="footer__section-title">Legal</h4>
-            <ul class="footer__list">
-              <li><span class="footer__link" style="opacity:.75; cursor: default;">Termos exigidos no envio</span></li>
-              <li><span class="footer__link" style="opacity:.75; cursor: default;">Privacidade e segurança</span></li>
-            </ul>
-          </div>
+           <div class="footer__section">
+          <h4 class="footer__section-title">Legal</h4>
+          <ul class="footer__list">
+            <li><a href="https://tullumotion.com/assets/docs/politica.pdf" class="footer__link">Política de Privacidade</a></li>
+            <li><a href="https://tullumotion.com/assets/docs/termos.pdf" target="_blank" class="footer__link">Termos de Uso</a></li>
+          </ul>
+        </div>
         </div>
 
       </div>
