--- a/teste-gratuito.html
+++ b/teste-gratuito.html
@@ -499,8 +499,8 @@
         <div class="footer__section">
           <h4 class="footer__section-title">Legal</h4>
           <ul class="footer__list">
-            <li><a href="#" class="footer__link">Política de Privacidade</a></li>
-            <li><a href="#" class="footer__link">Termos de Uso</a></li>
+            <li><a href="https://tullumotion.com/assets/docs/politica.pdf" class="footer__link">Política de Privacidade</a></li>
+            <li><a href="https://tullumotion.com/assets/docs/termos.pdf" target="_blank" class="footer__link">Termos de Uso</a></li>
           </ul>
         </div>
       </div>
