--- a/ma.html
+++ b/ma.html
@@ -216,7 +216,7 @@ body{
           Crie seu <span class="emph">1º agente</span><br>
           de IA fácil e rápido.
         </h1>
-        <p>Marketplace no-code para agentes de IA no WhatsApp.</p>
+        <p>Plataforma no-code para agentes de IA no WhatsApp.</p>
       </div>
 
       <div class="footer">
