--- a/appaistudio.html
+++ b/appaistudio.html
@@ -65,7 +65,7 @@
         class="btn btn--primary nav__cta"
         target="_blank"
         rel="noopener"
-      >FALAR PARA FECHAR</a>
+      >EU QUERO!</a>
     </div>
 
     <div class="nav__toggle" id="nav-toggle">
@@ -111,13 +111,13 @@
         <a href="#planos" class="btn btn--outline btn--large">Ver planos</a>
       </div>
 
-      <!-- micro-credibilidade (sem teste, sem termos) -->
+      <!-- micro-credibilidade (sem teste, sem termos) 
       <div style="margin-top: 1rem; display:flex; gap:.6rem; flex-wrap:wrap;">
         <span class="tag tag--ai">Sem “digite 1, 2 ou 3”</span>
         <span class="tag tag--ai">Atendimento natural</span>
         <span class="tag tag--ai">CRM em tempo real</span>
         <span class="tag tag--ai">Agenda integrada</span>
-      </div>
+      </div>-->
 
     </div>
   </div>
@@ -153,7 +153,7 @@
     <div class="section__header">
       <h2 class="section__title">O que você leva na implantação</h2>
       <p class="section__subtitle">
-        Você já consumiu conteúdo e sabe o valor. Aqui está o pacote de entrega, sem enrolação.
+        Aqui está o pacote de entrega, sem enrolação.
       </p>
     </div>
 
@@ -498,7 +498,7 @@
         <span class="gradient-text">Tullu Journal</span>
       </h1>
       <p class="cta-section__subtitle" style="max-width: 920px; margin-left:auto; margin-right:auto;">
-        Conteúdo direto, sem hype: como IA aumenta produtividade, reduz custo de atendimento e vira vantagem competitiva.
+        Conteúdo direto: como IA aumenta produtividade, reduz custo de atendimento e vira vantagem competitiva.
         Ideal pra você orientar o time e sustentar a decisão com argumentos reais.
       </p>
 
@@ -522,7 +522,7 @@
     <div class="section__header">
       <h2 class="section__title">Perguntas rápidas</h2>
       <p class="section__subtitle">
-        Sem burocracia: você fala comigo no WhatsApp, eu te mando proposta e implantamos com foco em conversão e operação.
+        Sem burocracia
       </p>
     </div>
 
@@ -638,7 +638,7 @@
                 class="footer__link"
                 target="_blank"
                 rel="noopener"
-              >WhatsApp (Rhyan)</a>
+              >WhatsApp - Consultor</a>
             </li>
             <li><a href="mailto:comercial@tullumotion.com" class="footer__link">comercial@tullumotion.com</a></li>
           </ul>
