--- a/appaistudio.html
+++ b/appaistudio.html
@@ -38,7 +38,11 @@
 </head>
 
 <body>
-
+<style>
+  .section__subtitle{
+    color: #fff;
+  }
+</style>
 <header class="header" id="header">
   <nav class="nav container">
     <div class="nav__logo">
