Atualizar o sorteio.html

--- a/sorteio.html
+++ b/sorteio.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sorteio Inteligente — Campanha digital + captação de dados | Tullu Motion</title>
+  <title>Sorteio Inteligente | Campanha digital + captação de dados | Tullu Motion</title>
   <meta name="description" content="Troque urna e papel por um Sorteio Inteligente: landing + formulário + planilha + automação + LGPD. Comece 2026 captando dados e vendendo mais." />
 
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Sorteio Inteligente — Campanha digital + captação de dados" />
+  <meta property="og:title" content="Sorteio Inteligente | Campanha digital + captação de dados" />
   <meta property="og:description" content="Landing + formulário + planilha + automação + LGPD prontos. Planos a partir de R$129." />
 
   <!-- Fonts -->
@@ -63,7 +63,7 @@
     <div class="hero__content">
 
       <div class="badge badge--soft">Janeiro é quando as campanhas começam. Comece certo.</div>
-
+<br>
       <h1 class="hero__title" style="line-height: 1.12;">
         <span class="gradient-text">Sorteio Inteligente</span><br />
         a campanha que capta dados e vende mais
@@ -71,15 +71,15 @@
 
       <p class="hero__subtitle" style="max-width: 860px;">
         Pare de “urna e papel”. A gente monta sua landing + formulário + planilha + automação,
-        com consentimento (LGPD) e termos prontos. Você foca em vender — e ganha uma base de clientes real.
+        com consentimento (LGPD) e termos prontos. Você foca em vender e ganha uma base de clientes real.
       </p>
-
+<!--
       <div style="display:flex; gap:.75rem; flex-wrap:wrap; margin-top: 1rem;">
         <span class="tag tag--ai">QR Code no caixa</span>
         <span class="tag tag--ai">Captação de nome/telefone/CPF</span>
         <span class="tag tag--ai">Planilha organizada + automação</span>
         <span class="tag tag--ai">LGPD pronta no formulário</span>
-      </div>
+      </div> -->
 
       <div class="hero__cta" style="margin-top: 1.25rem;">
         <a
@@ -105,7 +105,7 @@
     <div class="section__header">
       <h2 class="section__title">O erro comum em sorteios</h2>
       <p class="section__subtitle">
-        Urna, papel e cupom até “funcionam” — mas você perde o ativo mais valioso: <strong>a base de dados</strong>.
+        Urna, papel e cupom até “funcionam”, mas você perde o ativo mais valioso: <strong>a base de dados</strong>.
       </p>
     </div>
 
@@ -146,7 +146,7 @@
         Como funciona na prática
       </h2>
       <p class="cta-section__subtitle" style="max-width: 860px; margin-left:auto; margin-right:auto;">
-        Um fluxo simples que qualquer mercado/loja consegue rodar — e que vira um ativo de marketing pro ano inteiro.
+        Um fluxo simples que qualquer mercado/loja consegue rodar e que vira um ativo de marketing pro ano inteiro.
       </p>
 
       <div class="cards-grid" style="
@@ -431,7 +431,7 @@
     <div class="section__header">
       <h2 class="section__title">Perguntas rápidas</h2>
       <p class="section__subtitle">
-        É simples: a gente monta, você divulga, a base cresce — e o sorteio acontece sem bagunça.
+        É simples: a gente monta, você divulga, a base cresce e o sorteio acontece sem bagunça.
       </p>
     </div>
 
