Atualizar o sorteio.html

--- a/sorteio.html
+++ b/sorteio.html
@@ -64,7 +64,7 @@
 
       <div class="badge badge--soft">Janeiro é quando as campanhas começam. Comece certo.</div>
 <br>
-      <h1 class="hero__title" style="line-height: 1.12;">
+      <h1 class="hero__title" style="line-height: 1.12; margin-top:15px;">
         <span class="gradient-text">Sorteio Inteligente</span><br />
         a campanha que capta dados e vende mais
       </h1>
