Atualizar o sorteio.html

--- a/sorteio.html
+++ b/sorteio.html
@@ -86,7 +86,7 @@
           href="https://wa.me/5511959029428?text=Quero%20ativar%20o%20Sorteio%20Inteligente.%20Meu%20neg%C3%B3cio%20%C3%A9%20(mercado%2Floja%2Ffarm%C3%A1cia%2Fetc)%20e%20quero%20uma%20campanha%20para%20Janeiro."
           class="btn btn--primary btn--large"
           target="_blank"
-        >Falar no WhatsApp</a>
+        >Eu quero fazer um sorteio inteligente na minha loja!</a>
 
         <a href="#planos" class="btn btn--outline btn--large">Ver planos</a>
       </div>
