Atualizar o sorteio.html

--- a/sorteio.html
+++ b/sorteio.html
@@ -252,7 +252,108 @@
     </p>
   </div>
 </section>
+<!-- VISUALIZAÇÃO DO FLUXO (antes dos valores/planos) -->
+<section class="cta-section" id="fluxo-sorteio">
+  <div class="container">
 
+    <header class="section__header">
+      <h2 class="section__title">
+        Visualize o <span class="gradient-text">fluxo do Sorteio Inteligente</span>
+      </h2>
+      <p class="section__subtitle">
+        Não é “só um sorteio”. É uma campanha que vira base de clientes e marketing pronto para rodar.
+      </p>
+    </header>
+
+    <div class="card-base" style="
+      max-width: 920px;
+      margin: 0 auto;
+      padding: 18px;
+      background: linear-gradient(180deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
+      border: 1px solid rgba(255,255,255,0.10);
+    ">
+
+      <!-- STEP 1 -->
+      <div class="card-base" style="background: rgba(255,255,255,0.03); align-items:flex-start;">
+        <div class="pain-card__icon">1</div>
+        <div>
+          <strong>Página + formulário com a marca do seu negócio</strong>
+          <div style="margin-top:.35rem; color: var(--muted);">
+            Layout igual site profissional, com hospedagem e domínio/URL do sorteio.
+            O acesso pode ser via QR Code no caixa ou link.
+          </div>
+        </div>
+      </div>
+
+      <div style="display:flex; justify-content:center; padding: 10px 0;">
+        <span class="tag tag--ai" aria-hidden="true">↓</span>
+      </div>
+
+      <!-- STEP 2 -->
+      <div class="card-base" style="background: rgba(255,255,255,0.03); align-items:flex-start;">
+        <div class="pain-card__icon">2</div>
+        <div>
+          <strong>O cliente se cadastra em segundos</strong>
+          <div style="margin-top:.35rem; color: var(--muted);">
+            Nome, telefone e CPF (ou o que você definir). Com consentimento e links de termos (LGPD) já no formulário.
+          </div>
+        </div>
+      </div>
+
+      <div style="display:flex; justify-content:center; padding: 10px 0;">
+        <span class="tag tag--ai" aria-hidden="true">↓</span>
+      </div>
+
+      <!-- STEP 3 -->
+      <div class="card-base" style="background: rgba(255,255,255,0.03); align-items:flex-start;">
+        <div class="pain-card__icon">3</div>
+        <div>
+          <strong>Os dados caem automaticamente na sua planilha</strong>
+          <div style="margin-top:.35rem; color: var(--muted);">
+            Tudo organizado com data/hora, pronto para acompanhar a campanha e exportar no dia do sorteio.
+          </div>
+        </div>
+      </div>
+
+      <div style="display:flex; justify-content:center; padding: 10px 0;">
+        <span class="tag tag--ai" aria-hidden="true">↓</span>
+      </div>
+
+      <!-- STEP 4 -->
+      <div class="card-base" style="background: rgba(255,255,255,0.03); align-items:flex-start;">
+        <div class="pain-card__icon">4</div>
+        <div>
+          <strong>Disparamos e-mails para a base durante a campanha</strong>
+          <div style="margin-top:.35rem; color: var(--muted);">
+            Lembretes, promoções e atualizações do sorteio (conforme o plano e o período da ação).
+            Você transforma participação em retorno.
+          </div>
+        </div>
+      </div>
+
+      <div style="display:flex; justify-content:center; padding: 10px 0;">
+        <span class="tag tag--ai" aria-hidden="true">↓</span>
+      </div>
+
+      <!-- STEP 5 -->
+      <div class="card-base" style="
+        background: linear-gradient(180deg, rgba(34,211,238,0.18), rgba(34,211,238,0.06));
+        border: 1px solid rgba(34,211,238,0.30);
+        align-items:flex-start;
+      ">
+        <div class="pain-card__icon">5</div>
+        <div>
+          <strong>Quando o sorteio acontece, você fica com o ativo</strong>
+          <div style="margin-top:.35rem; color: var(--muted);">
+            Uma base rica de clientes engajados, pronta para campanhas futuras — e não uma urna cheia de papéis.
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
 <!-- PLANOS -->
 <section class="cta-section" id="planos">
   <div class="container">
