Atualizar o sorteio.html

--- a/sorteio.html
+++ b/sorteio.html
@@ -267,13 +267,7 @@
 
     <div class="card-base flowviz" aria-label="Fluxo do Sorteio Inteligente">
       <!-- shapes atrás (apenas visual) -->
-      <div class="flowviz__bg" aria-hidden="true">
-        <span class="flowviz__pill flowviz__pill--1"></span>
-        <span class="flowviz__pill flowviz__pill--2"></span>
-        <span class="flowviz__pill flowviz__pill--3"></span>
-        <span class="flowviz__pill flowviz__pill--4"></span>
-      </div>
-
+    
       <!-- conteúdo sempre em cima -->
       <div class="flowviz__content">
 
@@ -336,9 +330,9 @@
         <div class="flowstep flowstep--final">
           <div class="flowstep__n">5</div>
           <div class="flowstep__box">
-            <strong>O sorteio acontece — e você fica com o ativo</strong>
+            <strong>O sorteio acontece e você fica com o ativo</strong>
             <p>
-              Além do ganhador, você fica com uma base rica de clientes que já participou e engajou com seu negócio.
+              Você fica com uma base rica de clientes que já participou e engajou com seu negócio.
             </p>
           </div>
         </div>
@@ -361,16 +355,7 @@
     }
 
     /* bg shapes (atrás) */
-    #fluxo-sorteio .flowviz__bg{
-      position:absolute;
-      inset: 14px;
-      border-radius: 18px;
-      background: radial-gradient(circle at 25% 35%, rgba(59,130,246,0.18), transparent 60%),
-                  radial-gradient(circle at 75% 35%, rgba(34,211,238,0.12), transparent 60%);
-      border: 1px solid rgba(255,255,255,0.08);
-      z-index: 0;
-      pointer-events:none;
-    }
+  
     #fluxo-sorteio .flowviz__pill{
       position:absolute;
       bottom: 16px;
