--- a/ma.html
+++ b/ma.html
@@ -12,13 +12,8 @@
 
 <style>
 :root{
-  --blue:#3B82F6;
-  --blue-2:#2563EB;
-  --blue-3:#60A5FA;
-  --cyan:#22D3EE;
-
   --text:#ffffff;
-  --muted:rgba(255,255,255,.88);
+  --muted:rgba(255,255,255,.90);
   --ink:#0B1220;
 }
 
@@ -33,15 +28,26 @@ body{
   font-family:"Sora", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-/* ===== Canvas Story (9:16) ===== */
+/* ✅ CORREÇÃO PRINCIPAL:
+   Sempre renderiza em "tela cheia" no mobile.
+   (Nada de ficar menor que o Story) */
 .story{
-  width:min(1080px, 96vw);
-  aspect-ratio:9/16;
+  width:1080px;
+  height:1920px;
   position:relative;
   overflow:hidden;
   border-radius:34px;
 
   background: linear-gradient(180deg, #8CC8FF 0%, #5BA8FF 35%, #2F77F2 70%, #1F5CE0 100%);
+}
+
+/* Fit no mobile: ocupa 100% da viewport sem sobrar borda preta */
+@media (max-width: 1100px){
+  .story{
+    width:100vw;
+    height:100vh;
+    border-radius:0; /* ✅ fica igual Story real na tela */
+  }
 }
 
 /* Halos + sheen */
@@ -89,12 +95,12 @@ body{
   opacity:.22;
 }
 
-/* ===== Safe area + layout ===== */
+/* ===== Conteúdo ===== */
 .content{
   position:relative;
   z-index:1;
   height:100%;
-  padding:120px 64px 160px; /* ✅ mais safe pra print iPhone */
+  padding:140px 84px 190px; /* safe area p/ print */
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -102,28 +108,26 @@ body{
   gap:28px;
 }
 
-/* Logo Mercado Agentes (topo) */
+/* ✅ LOGO: sem texto ao lado + proporção correta */
 .brand{
   position:absolute;
-  top:54px;
-  left:54px;
-  display:flex;
-  align-items:center;
-  gap:12px;
+  top:56px;
+  left:56px;
   z-index:2;
 }
 .brand img{
-  width:44px;
-  height:44px;
-  border-radius:14px;
-  box-shadow:0 14px 40px rgba(0,0,0,.22);
+  width:86px;             /* ✅ maior e não espremido */
+  height:auto;            /* ✅ mantém proporção */
+  display:block;
+  object-fit:contain;
+  filter: drop-shadow(0 14px 40px rgba(0,0,0,.22));
 }
-.brand span{
-  color:rgba(255,255,255,.95);
-  font-weight:700;
-  font-size:16px;
-  letter-spacing:.02em;
-  text-shadow:0 14px 40px rgba(0,0,0,.22);
+
+/* Ajuste do logo no mobile */
+@media (max-width: 600px){
+  .brand{ top:34px; left:22px; }
+  .brand img{ width:64px; }
+  .content{ padding:120px 22px 160px; gap:22px; }
 }
 
 /* Pill ALERTA */
@@ -132,7 +136,7 @@ body{
   align-items:center;
   justify-content:center;
   gap:16px;
-  padding:16px 30px;
+  padding:18px 34px;
   border-radius:999px;
   background: linear-gradient(180deg, rgba(255,255,255,.95), rgba(255,255,255,.80));
   border:1px solid rgba(255,255,255,.55);
@@ -143,13 +147,13 @@ body{
   font-weight:800;
   letter-spacing:.12em;
   text-transform:uppercase;
-  font-size:20px;  /* ✅ menor pra caber */
+  font-size:22px;
 }
 
 /* Headline */
 .h1{
-  margin:6px 0 0;
-  font-size:clamp(58px, 6.2vw, 86px); /* ✅ menor */
+  margin:8px 0 0;
+  font-size:clamp(60px, 6.6vw, 92px);
   font-weight:900;
   line-height:1.06;
   letter-spacing:-0.04em;
@@ -157,13 +161,13 @@ body{
   text-shadow:0 18px 55px rgba(0,0,0,.22);
 }
 
-/* Subtexto (quebras parecidas com o print) */
+/* Subtexto */
 .sub{
-  max-width:760px;
-  font-size:clamp(22px, 2.35vw, 30px); /* ✅ menor */
+  max-width:820px;
+  font-size:clamp(22px, 2.5vw, 32px);
   font-weight:650;
-  line-height:1.55;
-  color:rgba(255,255,255,.92);
+  line-height:1.6;
+  color:var(--muted);
   text-shadow:0 14px 40px rgba(0,0,0,.18);
 }
 
@@ -171,23 +175,23 @@ body{
 .market{
   width:min(860px, 92%);
   margin-top:6px;
-  padding:26px 30px;
-  border-radius:26px;
+  padding:28px 34px;
+  border-radius:28px;
   background: linear-gradient(180deg, rgba(255,255,255,.70), rgba(255,255,255,.55));
   border:1px solid rgba(255,255,255,.55);
   box-shadow:
     0 26px 70px rgba(0,0,0,.18),
     inset 0 1px 0 rgba(255,255,255,.80);
   color:var(--ink);
-  font-size:clamp(30px, 3.2vw, 42px); /* ✅ menor */
+  font-size:clamp(30px, 3.4vw, 46px);
   font-weight:900;
   letter-spacing:-0.03em;
 }
 
 /* Footer texto */
 .footer{
-  margin-top:6px;
-  font-size:clamp(22px, 2.3vw, 30px); /* ✅ menor */
+  margin-top:8px;
+  font-size:clamp(22px, 2.4vw, 32px);
   font-weight:800;
   color:rgba(255,255,255,.92);
   text-shadow:0 14px 40px rgba(0,0,0,.18);
@@ -195,8 +199,8 @@ body{
 
 /* CTA pill final */
 .cta{
-  width:min(820px, 92%);
-  padding:22px 30px;
+  width:min(860px, 92%);
+  padding:24px 34px;
   border-radius:999px;
   background: rgba(255,255,255,.16);
   border:1px solid rgba(255,255,255,.30);
@@ -204,17 +208,15 @@ body{
   box-shadow:0 18px 50px rgba(0,0,0,.16);
   color:rgba(255,255,255,.96);
   font-weight:800;
-  font-size:clamp(20px, 2.1vw, 26px);
+  font-size:clamp(20px, 2.2vw, 28px);
 }
 
-/* Mobile */
-@media(max-width:600px){
-  .content{ padding:110px 24px 150px; gap:22px; }
-  .brand{ top:42px; left:22px; }
-  .brand img{ width:40px; height:40px; border-radius:12px; }
-  .brand span{ font-size:14px; }
-  .alert{ font-size:18px; padding:14px 22px; }
-  .market{ padding:22px 22px; }
+/* ✅ Se seu Safari iOS estiver “encolhendo” por causa do 100vh,
+   isso melhora em browsers modernos */
+@supports (height: 100dvh){
+  @media (max-width:1100px){
+    .story{ height:100dvh; }
+  }
 }
 </style>
 </head>
@@ -222,11 +224,9 @@ body{
 <body>
 
 <section class="story">
-  <!-- Logo Mercado Agentes -->
+  <!-- ✅ Logo sem texto ao lado -->
   <div class="brand">
-    <!-- Troque o src pelo caminho real do seu logo -->
     <img src="assets/img/logoma.avif" alt="Mercado Agentes">
-    <span>mercado agentes</span>
   </div>
 
   <div class="content">
