--- a/ma.html
+++ b/ma.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 <title>Story — Alerta Geral | Mercado Agentes</title>
 
 <!-- Fonte Sora -->
@@ -13,40 +13,48 @@
 <style>
 :root{
   --text:#ffffff;
-  --muted:rgba(255,255,255,.90);
+  --muted:rgba(255,255,255,.92);
   --ink:#0B1220;
+  --pad: clamp(18px, 4vw, 56px);
 }
 
 *{box-sizing:border-box}
 
+html,body{
+  height:100%;
+}
+
 body{
   margin:0;
-  min-height:100vh;
-  display:grid;
-  place-items:center;
   background:#000;
   font-family:"Sora", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-/* ✅ CORREÇÃO PRINCIPAL:
-   Sempre renderiza em "tela cheia" no mobile.
-   (Nada de ficar menor que o Story) */
+/* ✅ Página ocupa a tela e permite scroll */
+.page{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:stretch;
+}
+
+/* ===== Canvas ===== */
 .story{
+  position:relative;
   width:1080px;
   height:1920px;
-  position:relative;
-  overflow:hidden;
   border-radius:34px;
+  overflow:hidden;
 
   background: linear-gradient(180deg, #8CC8FF 0%, #5BA8FF 35%, #2F77F2 70%, #1F5CE0 100%);
 }
 
-/* Fit no mobile: ocupa 100% da viewport sem sobrar borda preta */
+/* ✅ Mobile: ocupa a tela inteira (sem ficar “menor”) */
 @media (max-width: 1100px){
   .story{
     width:100vw;
-    height:100vh;
-    border-radius:0; /* ✅ fica igual Story real na tela */
+    height:100vh;     /* altura real da viewport */
+    border-radius:0;
   }
 }
 
@@ -67,7 +75,6 @@ body{
       rgba(255,255,255,.00) 78%
     );
   pointer-events:none;
-  opacity:1;
 }
 
 /* Grain */
@@ -79,140 +86,154 @@ body{
   background:
     repeating-linear-gradient(
       0deg,
-      rgba(255,255,255,.035) 0px,
-      rgba(255,255,255,.035) 1px,
+      rgba(255,255,255,.030) 0px,
+      rgba(255,255,255,.030) 1px,
       rgba(255,255,255,0) 2px,
       rgba(255,255,255,0) 4px
-    ),
-    repeating-linear-gradient(
-      90deg,
-      rgba(0,0,0,.03) 0px,
-      rgba(0,0,0,.03) 1px,
-      rgba(0,0,0,0) 2px,
-      rgba(0,0,0,0) 5px
     );
   mix-blend-mode:soft-light;
   opacity:.22;
 }
 
-/* ===== Conteúdo ===== */
-.content{
+/* ✅ Área rolável (resolve “não scrolla” no iPhone) */
+.scroll{
   position:relative;
   z-index:1;
   height:100%;
-  padding:140px 84px 190px; /* safe area p/ print */
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+}
+
+/* ✅ Conteúdo com safe-area (barras do Safari) */
+.content{
+  padding:
+    calc(var(--pad) + env(safe-area-inset-top))
+    var(--pad)
+    calc(var(--pad) + env(safe-area-inset-bottom))
+    var(--pad);
+
   display:flex;
   flex-direction:column;
   align-items:center;
-  text-align:center;
-  gap:28px;
+  gap:18px;
+
+  /* ✅ dá “folga” pra você printar sem encostar na barra */
+  padding-top: calc(var(--pad) + 18px + env(safe-area-inset-top));
+  padding-bottom: calc(var(--pad) + 40px + env(safe-area-inset-bottom));
 }
 
-/* ✅ LOGO: sem texto ao lado + proporção correta */
+/* ✅ Logo: sem texto e sem distorção */
 .brand{
-  position:absolute;
-  top:56px;
-  left:56px;
-  z-index:2;
+  align-self:flex-start;
 }
 .brand img{
-  width:86px;             /* ✅ maior e não espremido */
-  height:auto;            /* ✅ mantém proporção */
+  width:64px;      /* menor e proporcional */
+  height:auto;
   display:block;
   object-fit:contain;
   filter: drop-shadow(0 14px 40px rgba(0,0,0,.22));
 }
 
-/* Ajuste do logo no mobile */
-@media (max-width: 600px){
-  .brand{ top:34px; left:22px; }
-  .brand img{ width:64px; }
-  .content{ padding:120px 22px 160px; gap:22px; }
-}
-
-/* Pill ALERTA */
+/* Pill ALERTA (menor) */
 .alert{
+  margin-top:4px;
   display:inline-flex;
   align-items:center;
   justify-content:center;
-  gap:16px;
-  padding:18px 34px;
+  gap:14px;
+  padding:14px 26px;
   border-radius:999px;
-  background: linear-gradient(180deg, rgba(255,255,255,.95), rgba(255,255,255,.80));
+  background: linear-gradient(180deg, rgba(255,255,255,.95), rgba(255,255,255,.82));
   border:1px solid rgba(255,255,255,.55);
   box-shadow:
-    0 22px 60px rgba(0,0,0,.18),
+    0 18px 46px rgba(0,0,0,.16),
     inset 0 1px 0 rgba(255,255,255,.85);
   color:var(--ink);
   font-weight:800;
-  letter-spacing:.12em;
+  letter-spacing:.11em;
   text-transform:uppercase;
-  font-size:22px;
+  font-size:18px; /* ✅ menor */
 }
 
-/* Headline */
+/* Headline menor (pra caber no iPhone 11) */
 .h1{
-  margin:8px 0 0;
-  font-size:clamp(60px, 6.6vw, 92px);
+  margin:2px 0 0;
+  font-size:clamp(44px, 7.2vw, 74px);
   font-weight:900;
-  line-height:1.06;
+  line-height:1.05;
   letter-spacing:-0.04em;
   color:var(--text);
-  text-shadow:0 18px 55px rgba(0,0,0,.22);
+  text-shadow:0 16px 50px rgba(0,0,0,.20);
 }
 
-/* Subtexto */
+/* ✅ Texto “justificado” sem viúva:
+   - sem <br>
+   - largura controlada
+   - hyphenation */
 .sub{
-  max-width:820px;
-  font-size:clamp(22px, 2.5vw, 32px);
+  width:min(720px, 92%);
+  font-size:clamp(18px, 3.7vw, 26px);
   font-weight:650;
-  line-height:1.6;
+  line-height:1.55;
   color:var(--muted);
-  text-shadow:0 14px 40px rgba(0,0,0,.18);
+  text-shadow:0 14px 40px rgba(0,0,0,.16);
+
+  text-align:justify;
+  text-justify:inter-word;
+  hyphens:auto;
+  -webkit-hyphens:auto;
+
+  /* melhora quebra em browsers modernos */
+  text-wrap:balance;
 }
 
-/* Card marketplace */
+/* Card marketplace menor */
 .market{
-  width:min(860px, 92%);
-  margin-top:6px;
-  padding:28px 34px;
-  border-radius:28px;
-  background: linear-gradient(180deg, rgba(255,255,255,.70), rgba(255,255,255,.55));
+  width:min(740px, 94%);
+  padding:18px 22px;
+  border-radius:22px;
+  background: linear-gradient(180deg, rgba(255,255,255,.70), rgba(255,255,255,.56));
   border:1px solid rgba(255,255,255,.55);
   box-shadow:
-    0 26px 70px rgba(0,0,0,.18),
+    0 22px 60px rgba(0,0,0,.16),
     inset 0 1px 0 rgba(255,255,255,.80);
   color:var(--ink);
-  font-size:clamp(30px, 3.4vw, 46px);
+  font-size:clamp(22px, 4.4vw, 34px);
   font-weight:900;
   letter-spacing:-0.03em;
+  text-align:center;
 }
 
-/* Footer texto */
+/* Footer menor */
 .footer{
-  margin-top:8px;
-  font-size:clamp(22px, 2.4vw, 32px);
+  width:min(720px, 92%);
+  font-size:clamp(18px, 3.8vw, 26px);
   font-weight:800;
   color:rgba(255,255,255,.92);
-  text-shadow:0 14px 40px rgba(0,0,0,.18);
+  text-shadow:0 14px 40px rgba(0,0,0,.16);
+  text-align:center;
+
+  text-wrap:balance;
 }
 
-/* CTA pill final */
+/* CTA menor */
 .cta{
-  width:min(860px, 92%);
-  padding:24px 34px;
+  width:min(760px, 94%);
+  padding:16px 20px;
   border-radius:999px;
   background: rgba(255,255,255,.16);
   border:1px solid rgba(255,255,255,.30);
   backdrop-filter: blur(12px);
-  box-shadow:0 18px 50px rgba(0,0,0,.16);
+  box-shadow:0 18px 50px rgba(0,0,0,.14);
   color:rgba(255,255,255,.96);
   font-weight:800;
-  font-size:clamp(20px, 2.2vw, 28px);
+  font-size:clamp(16px, 3.4vw, 22px);
+  text-align:center;
+
+  text-wrap:balance;
 }
 
-/* ✅ Se seu Safari iOS estiver “encolhendo” por causa do 100vh,
-   isso melhora em browsers modernos */
+/* ✅ iPhone Safari: 100dvh quando suportado */
 @supports (height: 100dvh){
   @media (max-width:1100px){
     .story{ height:100dvh; }
@@ -222,45 +243,41 @@ body{
 </head>
 
 <body>
+  <main class="page">
+    <section class="story">
+      <div class="scroll">
+        <div class="content">
+          <div class="brand">
+            <img src="assets/img/logoma.avif" alt="Mercado Agentes">
+          </div>
 
-<section class="story">
-  <!-- ✅ Logo sem texto ao lado -->
-  <div class="brand">
-    <img src="assets/img/logoma.avif" alt="Mercado Agentes">
-  </div>
+          <div class="alert">🚨&nbsp; ALERTA GERAL &nbsp;🚨</div>
 
-  <div class="content">
-    <div class="alert">🚨&nbsp; ALERTA GERAL &nbsp;🚨</div>
+          <div class="h1">
+            2026<br>
+            começa do<br>
+            jeito certo.
+          </div>
 
-    <div class="h1">
-      2026<br>
-      começa do<br>
-      jeito certo.
-    </div>
+          <div class="sub">
+            Uma <strong>NOVIDADE GRANDE</strong> está chegando para quem quer criar,
+            vender e escalar agentes de IA.
+          </div>
 
-    <div class="sub">
-      Uma <strong>NOVIDADE GRANDE</strong> está<br>
-      chegando<br>
-      para quem quer criar, vender e<br>
-      escalar<br>
-      agentes de IA.
-    </div>
+          <div class="market">
+            O Marketplace está na reta final 🚀
+          </div>
 
-    <div class="market">
-      O Marketplace está<br>
-      na reta final 🚀
-    </div>
+          <div class="footer">
+            Quem estiver atento agora, sai na frente depois.
+          </div>
 
-    <div class="footer">
-      Quem estiver atento agora,<br>
-      sai na frente depois.
-    </div>
-
-    <div class="cta">
-      Fica de olho 👀 — em breve contamos mais
-    </div>
-  </div>
-</section>
-
+          <div class="cta">
+            Fica de olho 👀 — em breve contamos mais
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
