Atualizar o ma.html

--- a/ma.html
+++ b/ma.html
@@ -1,3 +1,154 @@
+<!doctype html>
+<html lang="pt-br">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<title>Story — Alerta Geral | Mercado Agentes</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600;700;800&display=swap" rel="stylesheet">
+
+<style>
+:root{
+  --text:#ffffff;
+  --muted:rgba(255,255,255,.92);
+  --ink:#0B1220;
+  --pad: clamp(18px, 4vw, 56px);
+}
+
+*{box-sizing:border-box}
+
+html,body{height:100%}
+
+body{
+  margin:0;
+  background:#000;
+  font-family:"Sora", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+}
+
+.page{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:stretch;
+}
+
+.story{
+  position:relative;
+  width:1080px;
+  height:1920px;
+  border-radius:34px;
+  overflow:hidden;
+  background: linear-gradient(180deg, #8CC8FF 0%, #5BA8FF 35%, #2F77F2 70%, #1F5CE0 100%);
+}
+
+@media (max-width:1100px){
+  .story{
+    width:100vw;
+    height:100vh;
+    border-radius:0;
+  }
+}
+
+.story::before{
+  content:"";
+  position:absolute;
+  inset:-12%;
+  background:
+    radial-gradient(900px 700px at 20% 12%, rgba(255,255,255,.18), transparent 65%),
+    radial-gradient(900px 700px at 85% 20%, rgba(34,211,238,.14), transparent 62%),
+    radial-gradient(1100px 900px at 50% 120%, rgba(0,0,0,.14), transparent 55%),
+    linear-gradient(115deg,
+      rgba(255,255,255,0) 0%,
+      rgba(255,255,255,.10) 28%,
+      rgba(255,255,255,0) 46%,
+      rgba(255,255,255,.08) 62%,
+      rgba(255,255,255,0) 78%
+    );
+  pointer-events:none;
+}
+
+.story::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  pointer-events:none;
+  background:
+    repeating-linear-gradient(
+      0deg,
+      rgba(255,255,255,.030) 0px,
+      rgba(255,255,255,.030) 1px,
+      rgba(255,255,255,0) 2px,
+      rgba(255,255,255,0) 4px
+    );
+  mix-blend-mode:soft-light;
+  opacity:.22;
+}
+
+.scroll{
+  position:relative;
+  z-index:1;
+  height:100%;
+  overflow:auto;
+  -webkit-overflow-scrolling:touch;
+}
+
+.content{
+  padding:
+    calc(var(--pad) + env(safe-area-inset-top))
+    var(--pad)
+    calc(var(--pad) + env(safe-area-inset-bottom))
+    var(--pad);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:18px;
+  padding-top: calc(var(--pad) + 18px + env(safe-area-inset-top));
+  padding-bottom: calc(var(--pad) + 40px + env(safe-area-inset-bottom));
+}
+
+.brand{align-self:flex-start}
+.brand img{
+  width:64px;
+  height:auto;
+  display:block;
+  object-fit:contain;
+  filter: drop-shadow(0 14px 40px rgba(0,0,0,.22));
+}
+
+.alert{
+  margin-top:4px;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  gap:14px;
+  padding:14px 26px;
+  border-radius:999px;
+  background: linear-gradient(180deg, rgba(255,255,255,.95), rgba(255,255,255,.82));
+  border:1px solid rgba(255,255,255,.55);
+  box-shadow:
+    0 18px 46px rgba(0,0,0,.16),
+    inset 0 1px 0 rgba(255,255,255,.85);
+  color:var(--ink);
+  font-weight:800;
+  letter-spacing:.11em;
+  text-transform:uppercase;
+  font-size:18px;
+}
+
+.h1{
+  margin:2px 0 0;
+  max-width:900px;
+  text-align:center;
+  font-size:clamp(44px, 7.2vw, 74px);
+  font-weight:900;
+  line-height:1.05;
+  letter-spacing:-0.04em;
+  color:var(--text);
+  text-shadow:0 16px 50px rgba(0,0,0,.20);
+}
+
 .sub{
   width:min(720px, 92%);
   font-size:clamp(18px, 3.7vw, 26px);
@@ -5,9 +156,24 @@
   line-height:1.55;
   color:var(--muted);
   text-shadow:0 14px 40px rgba(0,0,0,.16);
-
   text-align:center;
   text-wrap:balance;
+}
+
+.market{
+  width:min(740px, 94%);
+  padding:18px 22px;
+  border-radius:22px;
+  background: linear-gradient(180deg, rgba(255,255,255,.70), rgba(255,255,255,.56));
+  border:1px solid rgba(255,255,255,.55);
+  box-shadow:
+    0 22px 60px rgba(0,0,0,.16),
+    inset 0 1px 0 rgba(255,255,255,.80);
+  color:var(--ink);
+  font-size:clamp(22px, 4.4vw, 34px);
+  font-weight:900;
+  letter-spacing:-0.03em;
+  text-align:center;
 }
 
 .footer{
@@ -16,7 +182,6 @@
   font-weight:800;
   color:rgba(255,255,255,.92);
   text-shadow:0 14px 40px rgba(0,0,0,.16);
-
   text-align:center;
   text-wrap:balance;
 }
@@ -32,7 +197,54 @@
   color:rgba(255,255,255,.96);
   font-weight:800;
   font-size:clamp(16px, 3.4vw, 22px);
-
   text-align:center;
   text-wrap:balance;
 }
+
+@supports (height:100dvh){
+  @media (max-width:1100px){
+    .story{height:100dvh}
+  }
+}
+</style>
+</head>
+
+<body>
+<main class="page">
+  <section class="story">
+    <div class="scroll">
+      <div class="content">
+        <div class="brand">
+          <img src="assets/img/logoma.avif" alt="Mercado Agentes">
+        </div>
+
+        <div class="alert">🚨&nbsp; ALERTA GERAL &nbsp;🚨</div>
+
+        <div class="h1">
+          2026<br>
+          começa do<br>
+          jeito certo.
+        </div>
+
+        <div class="sub">
+          Uma <strong>NOVIDADE GRANDE</strong> está chegando para quem quer criar,
+          vender e escalar agentes de IA.
+        </div>
+
+        <div class="market">
+          O Marketplace está na reta final 🚀
+        </div>
+
+        <div class="footer">
+          Quem estiver atento agora, sai na frente depois.
+        </div>
+
+        <div class="cta">
+          Fica de olho 👀 — em breve contamos mais
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
+</body>
+</html>
