--- a/ma.html
+++ b/ma.html
@@ -40,7 +40,11 @@ body{
   height:1920px;
   border-radius:34px;
   overflow:hidden;
-  background: linear-gradient(180deg, #8CC8FF 0%, #5BA8FF 35%, #2F77F2 70%, #1F5CE0 100%);
+  background: linear-gradient(180deg,
+  #0E1628 0%,
+  #0B1F3A 35%,
+  #0A2A52 70%,
+  #081B34 100%);
 }
 
 @media (max-width:1100px){
